--- a/manual/source/requirements.txt
+++ b/manual/source/requirements.txt
@@ -4,4 +4,4 @@ sphinx-version-warning==1.1.2
 sphinx-tabs==3.4.4
 sphinx-copybutton==0.4.0
 sphinx-notfound-page
-sphinx-substitutions
+Sphinx-Substitutions-Extensions
